testdata/baselines/reference/compiler/quantifiedTypesAdvanced.errors.txt
quantifiedTypesAdvanced.ts(28,5): error TS2322: Type 'boolean' is not assignable to type 'string | number'.
quantifiedTypesAdvanced.ts(36,5): error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type '{ a: "hello"; ab: (a: "hello") => string; bc?: (b: string) => number; }'.


==== quantifiedTypesAdvanced.ts (2 errors) ====
    declare const f:
      <T extends (<A extends string | number, B, C> { a: A, ab: (a: A) => B, bc?: (b: B) => C })[]>(a: [...T]) =>
          { [K in keyof T]: T[K] extends { bc: (...a: never) => infer C } ? C : "lol" }
    
    let t0 = f([
      {
        a: "0",
        ab: a => +a,
        bc: b => typeof b === "number"
      },
      {
        a: "hello",
        ab: a => a + " world",
        bc: b => {
          b satisfies string
          return +b
        }
      },
      {
        a: 42,
        ab: a => a.toString()
      }
    ])
    
    
    let t1 = f([
      {
        a: true,
        ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string | number'.
!!! related TS6500 quantifiedTypesAdvanced.ts:2:51: The expected type comes from property 'a' which is declared here on type '{ a: string | number; ab: (a: string | number) => number; bc?: (b: number) => boolean; }'
        ab: a => +a,
        bc: b => typeof b === "number"
      },
      {
        a: "hello",
        ab: a => a + " world",
        bc: b => +b,
        extra: "foo" // TODO: an extra property should be allowed
        ~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type '{ a: "hello"; ab: (a: "hello") => string; bc?: (b: string) => number; }'.
      }
    ])